external-crates/move/crates/move-compiler/tests/move_check/translated_ir_tests/move/commands/use_before_assign.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/use_before_assign.move:4:9
  │
4 │     let y = x;
  │         ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/use_before_assign.move:4:13
  │
3 │     let x: u64;
  │         - The variable 'x' does not have a value. The variable must be assigned a value before being used.
4 │     let y = x;
  │             ^ Invalid usage of unassigned variable 'x'
